--- a/packages/cubejs-playground/public/chart-renderers/react/index.html
+++ b/packages/cubejs-playground/public/chart-renderers/react/index.html
@@ -12,8 +12,8 @@
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="/manifest.json" />
     <title>React App</title>
-    <link href="./chart-renderers/react/static/css/2.6f338a1f.chunk.css" rel="stylesheet" />
-    <link href="./chart-renderers/react/static/css/main.6dea0f05.chunk.css" rel="stylesheet" />
+    <link href="/chart-renderers/react/static/css/2.6f338a1f.chunk.css" rel="stylesheet" />
+    <link href="/chart-renderers/react/static/css/main.6dea0f05.chunk.css" rel="stylesheet" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -168,7 +168,7 @@
         t();
       })([]);
     </script>
-    <script src="./chart-renderers/react/static/js/2.ebbd674d.chunk.js"></script>
-    <script src="./chart-renderers/react/static/js/main.bca47774.chunk.js"></script>
+    <script src="/chart-renderers/react/static/js/2.ebbd674d.chunk.js"></script>
+    <script src="/chart-renderers/react/static/js/main.bca47774.chunk.js"></script>
   </body>
 </html>
