bizcharts fix, chartjs height fix

--- a/packages/cubejs-playground/public/chart-renderers/react/index.html
+++ b/packages/cubejs-playground/public/chart-renderers/react/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <base href="/" />
+    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -12,7 +13,7 @@
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="/manifest.json" />
     <title>React App</title>
-    <link href="/chart-renderers/react/static/css/2.6f338a1f.chunk.css" rel="stylesheet" />
+    <link href="/chart-renderers/react/static/css/2.63c3720a.chunk.css" rel="stylesheet" />
     <link href="/chart-renderers/react/static/css/main.6dea0f05.chunk.css" rel="stylesheet" />
   </head>
   <body>
@@ -72,10 +73,10 @@
                 (i.src = (function (e) {
                   return (
                     a.p +
-                    './chart-renderers/react/static/js/' +
+                    'static/js/' +
                     ({}[e] || e) +
                     '.' +
-                    { 3: 'c1544e76' }[e] +
+                    { 3: '60492a9c' }[e] +
                     '.chunk.js'
                   );
                 })(e));
@@ -168,7 +169,7 @@
         t();
       })([]);
     </script>
-    <script src="/chart-renderers/react/static/js/2.ebbd674d.chunk.js"></script>
-    <script src="/chart-renderers/react/static/js/main.bca47774.chunk.js"></script>
+    <script src="/chart-renderers/react/static/js/2.1a789403.chunk.js"></script>
+    <script src="/chart-renderers/react/static/js/main.57e44d46.chunk.js"></script>
   </body>
 </html>
